test/files/neg/t6426.scala

trait T {
  import collection.{mutable => _, _}
  def f = `_`.Buffer(0)
}
