test/files/neg/t6426.check
t6426.scala:4: error: not found: value _
  def f = `_`.Buffer(0)
          ^
one error found
